--- a/ejemplojava.html
+++ b/ejemplojava.html
@@ -6,6 +6,18 @@ and open the template in the editor.
 -->
 <html>
 <head>
+    <style>
+        div.chartContainer {
+            float:right;
+            margin:auto;
+            margin-top: 10px;
+            margin-left: 10px;
+            background: rgba(0, 97, 255, 0.5);
+            with: 430x;
+            -moz-border-radius:10px;
+            -webkit-border-radius:10px;
+        }
+    </style>
 <title>My first chart using FusionCharts Suite XT</title>
 <script type="text/javascript" src="fusioncharts/fusioncharts.js"></script>
 <script type="text/javascript" src="fusioncharts/themes/fusioncharts.theme.fint.js"></script>
@@ -14,7 +26,7 @@ and open the template in the editor.
     var revenueChart = new FusionCharts({
         "type": "column2d",
         "renderAt": "chartContainer",
-        "width": "500",
+        "width": "425",
         "height": "300",
         "dataFormat": "json",
         "dataSource":  {
